kubernetes/monitoring/glitchtip/08-worker.yaml
---
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: glitchtip
#   name: worker
#   labels:
#     kalexlab.xyz/app: glitchtip
#     kalexlab.xyz/component: worker
# spec:
#   type: ClusterIP
#   ports: []
#   selector:
#     kalexlab.xyz/app: glitchtip
#     kalexlab.xyz/component: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: glitchtip
  name: worker
  labels:
    kalexlab.xyz/app: glitchtip
    kalexlab.xyz/component: worker
  annotations:
    keel.sh/policy: force
    keel.sh/force: "true"
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 6h"
    keel.sh/approvals: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: glitchtip
      kalexlab.xyz/component: worker
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: glitchtip
        kalexlab.xyz/component: worker
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: "glitchtip/glitchtip:latest"
          imagePullPolicy: Always
          command: ["./bin/run-celery-with-beat.sh"]

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /code/uploads
              name: uploads-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: uploads-pvc
          persistentVolumeClaim:
            claimName: uploads-pvc
