kubernetes/monitoring/glitchtip/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: glitchtip
  name: web
  labels:
    kalexlab.xyz/app: glitchtip
    kalexlab.xyz/component: web
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    kalexlab.xyz/app: glitchtip
    kalexlab.xyz/component: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: glitchtip
  name: web
  labels:
    kalexlab.xyz/app: glitchtip
    kalexlab.xyz/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: glitchtip
      kalexlab.xyz/component: web
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: glitchtip
        kalexlab.xyz/component: web
    spec:
      restartPolicy: Always
      containers:
        - name: web
          image: "docker.io/glitchtip/glitchtip:v4.2"
          imagePullPolicy: Always
          command: ["/bin/sh", "-c", "./bin/run-migrate.sh && ./bin/start.sh"]

          ports:
            - name: web
              containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 60

          resources:
            requests:
              memory: 200Mi
              cpu: 1m
            limits:
              memory: 500Mi
              cpu: 100m

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /code/uploads
              name: uploads-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: uploads-pvc
          persistentVolumeClaim:
            claimName: uploads-pvc
