kubernetes/monitoring/glitchtip/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: glitchtip
  name: glitchtip-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`glitchtip.kalexlab.xyz`)
      services:
        - name: web
          port: 8000
  tls:
    secretName: glitchtip-ingress-certificate-secret
